--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -51,10 +51,10 @@ The easiest way to run and learn _FlowStorm_ with _ClojureStorm_ is by running t
 [,bash]
 ----
 ;; on linux and mac-os
-clj -Sforce -Sdeps '{:deps {} :aliases {:dev {:classpath-overrides {org.clojure/clojure nil} :extra-deps {com.github.jpmonettas/clojure {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}} :jvm-opts ["-Dclojure.storm.instrumentEnable=true" "-Dclojure.storm.instrumentOnlyPrefixes=user"]}}}' -A:dev
+clj -Sforce -Sdeps '{:deps {} :aliases {:dev {:classpath-overrides {org.clojure/clojure nil} :extra-deps {com.github.flow-storm/clojure {:mvn/version "RELEASE"} com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}} :jvm-opts ["-Dclojure.storm.instrumentEnable=true" "-Dclojure.storm.instrumentOnlyPrefixes=user"]}}}' -A:dev
 
 ;; on windows
-clj -Sforce -Sdeps '{:deps {} :aliases {:dev {:classpath-overrides {org.clojure/clojure nil} :extra-deps {com.github.jpmonettas/clojure {:mvn/version """RELEASE"""} com.github.jpmonettas/flow-storm-dbg {:mvn/version """RELEASE"""}} :jvm-opts ["""-Dclojure.storm.instrumentEnable=true""" """-Dclojure.storm.instrumentOnlyPrefixes=user"""]}}}' -A:dev
+clj -Sforce -Sdeps '{:deps {} :aliases {:dev {:classpath-overrides {org.clojure/clojure nil} :extra-deps {com.github.flow-storm/clojure {:mvn/version """RELEASE"""} com.github.flow-storm/flow-storm-dbg {:mvn/version """RELEASE"""}} :jvm-opts ["""-Dclojure.storm.instrumentEnable=true""" """-Dclojure.storm.instrumentOnlyPrefixes=user"""]}}}' -A:dev
 ----
 
 [IMPORTANT]
@@ -62,7 +62,7 @@ clj -Sforce -Sdeps '{:deps {} :aliases {:dev {:classpath-overrides {org.clojure/
 ====
 Be careful when using RELEASE as maven versions, since the first time is going to fetch the latest one
 but it will be cached unless you run with -Sforce.
-It is much safer to just write the latest versions. Check out  the https://github.com/jpmonettas/flow-storm-debugger/[github page] for the latest stable releases.
+It is much safer to just write the latest versions. Check out  the https://github.com/flow-storm/flow-storm-debugger/[github page] for the latest stable releases.
 ====
 
 
@@ -77,8 +77,8 @@ If your project is using deps.edn, your deps.edn file should look like this :
 {:paths ["src"]
  :deps {}
  :aliases {:dev {:classpath-overrides {org.clojure/clojure nil} ;; for disabling the official compiler
-                 :extra-deps {com.github.jpmonettas/clojure {:mvn/version "RELEASE"}
-                              com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}
+                 :extra-deps {com.github.flow-storm/clojure {:mvn/version "RELEASE"}
+                              com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}
                  :jvm-opts ["-Dclojure.storm.instrumentEnable=true"
                             "-Dclojure.storm.instrumentOnlyPrefixes=YOUR_INSTRUMENTATION_STRING"]}}}
 ----
@@ -97,8 +97,8 @@ If your project uses lein, your project.clj file should look something like this
 [,clojure]
 ----
 (defproject my.project "1.0.0"
-  :profiles {:dev {:dependencies [[com.github.jpmonettas/clojure "RELEASE"]
-                                  [com.github.jpmonettas/flow-storm-dbg "RELEASE"] ]
+  :profiles {:dev {:dependencies [[com.github.flow-storm/clojure "RELEASE"]
+                                  [com.github.flow-storm/flow-storm-dbg "RELEASE"] ]
                    :exclusions [org.clojure/clojure] ;; for disabling the official compiler
                    :jvm-opts ["-Dclojure.storm.instrumentEnable=true"
                               "-Dclojure.storm.instrumentOnlyPrefixes=YOUR_INSTRUMENTATION_STRING"]}}
@@ -122,10 +122,10 @@ If you use https://clojure.org/guides/deps_and_cli[clojure cli] you can start a 
 [,bash]
 ----
 ;; on linux and mac-os
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}'
 
 ;; on windows
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version """RELEASE"""}}}'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version """RELEASE"""}}}'
 ----
 
 [IMPORTANT]
@@ -133,7 +133,7 @@ clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "
 ====
 Be careful when using RELEASE as maven versions, since the first time is going to fetch the latest one
 but it will be cached unless you run with -Sforce.
-It is much safer to just write the latest versions. Check out  the https://github.com/jpmonettas/flow-storm-debugger/[github page] for the latest stable releases.
+It is much safer to just write the latest versions. Check out  the https://github.com/flow-storm/flow-storm-debugger/[github page] for the latest stable releases.
 ====
 
 If you are a https://leiningen.org/[lein] user add the dependency to your project.clj `:dependencies` and run `lein repl`.
@@ -242,9 +242,9 @@ Then, modify your `deps.edn` dev profile to look like this :
         :extra-deps {thheller/shadow-cljs {:mvn/version "2.25.6" ;; >= 2.25.4
                                            :exclusions [org.clojure/clojurescript]}
                      ;; bring ClojureScriptStorm
-                     com.github.jpmonettas/clojurescript {:mvn/version "RELEASE"}
+                     com.github.flow-storm/clojurescript {:mvn/version "RELEASE"}
                      ;; add FlowStorm runtime dep
-                     com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}
+                     com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}
        :jvm-opts ["-Dcljs.storm.instrumentOnlyPrefixes=your-app-base-ns"
                    "-Dcljs.storm.instrumentEnable=true"
                    "-Dflowstorm.startRecording=false"]}}}
@@ -265,7 +265,7 @@ when your need it, run the debugger ui with your shadow-cljs.edn data :
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-app
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-app
 ----
 
 Now since we started the app with `flowstorm.startRecording=false` you will have to click on the record button once to start recording.
@@ -289,21 +289,21 @@ To compile instrumented files :
 
 [,bash]
 ----
-clj -J-Dcljs.storm.instrumentOnlyPrefixes=org.foo -J-Dcljs.storm.instrumentEnable=true -Sdeps '{:paths ["src"] :deps {com.github.jpmonettas/clojurescript {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}' -M -m cljs.main -co '{:preloads [flow-storm.storm-preload] :main org.foo.core}' --compile
+clj -J-Dcljs.storm.instrumentOnlyPrefixes=org.foo -J-Dcljs.storm.instrumentEnable=true -Sdeps '{:paths ["src"] :deps {com.github.flow-storm/clojurescript {:mvn/version "RELEASE"} com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}}' -M -m cljs.main -co '{:preloads [flow-storm.storm-preload] :main org.foo.core}' --compile
 ----
 
 To run a repl that instrument everything under org.foo :
 
 [,bash]
 ----
-clj -J-Dcljs.storm.instrumentOnlyPrefixes=org.foo -J-Dcljs.storm.instrumentEnable=true -Sdeps '{:paths ["src"] :deps {com.github.jpmonettas/clojurescript {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}' -M -m cljs.main -co '{:preloads [flow-storm.storm-preload] :main org.foo.core}' --repl
+clj -J-Dcljs.storm.instrumentOnlyPrefixes=org.foo -J-Dcljs.storm.instrumentEnable=true -Sdeps '{:paths ["src"] :deps {com.github.flow-storm/clojurescript {:mvn/version "RELEASE"} com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}}' -M -m cljs.main -co '{:preloads [flow-storm.storm-preload] :main org.foo.core}' --repl
 ----
 
 Then run the _FlowStorm_ UI :
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger
 ----
 
 And now refresh your browser page so your browser app connects to the UI.
@@ -319,7 +319,7 @@ First you need to add _FlowStorm_ dependency to your project dependencies, like 
 $ cat shadow-cljs.edn
 
 {...
- :dependencies [... [com.github.jpmonettas/flow-storm-inst "RELEASE"]]
+ :dependencies [... [com.github.flow-storm/flow-storm-inst "RELEASE"]]
 
  ;; the next two lines aren't needed but pretty convenient
  :nrepl {:port 9000}
@@ -332,7 +332,7 @@ $ cat shadow-cljs.edn
 ====
 Be careful when using RELEASE as maven versions, since the first time is going to fetch the latest one
 but it will be cached unless you run with -Sforce.
-It is much safer to just write the latest versions. Check out  the https://github.com/jpmonettas/flow-storm-debugger/[github page] for the latest stable releases.
+It is much safer to just write the latest versions. Check out  the https://github.com/flow-storm/flow-storm-debugger/[github page] for the latest stable releases.
 ====
 
 
@@ -359,10 +359,10 @@ so to start the debugger and connect to it you run :
 [,bash]
 ----
 ;; on linux and mac-os
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-build-id
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-build-id
 
 ;; on windows
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version """RELEASE"""}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-build-id
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version """RELEASE"""}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :my-build-id
 ----
 
 And that is all you need, the debugger GUI will pop up and everything will be ready.
@@ -395,7 +395,7 @@ For this you can start the debugger like before but without any parameters, like
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger
 ----
 
 And then go to your app code and call `(flow-storm.api/remote-connect)` maybe on your main, so every time your program starts
@@ -431,7 +431,7 @@ will have to require flow-storm.api yourself, probably in your main. All the tra
 once it is connected.
 ====
 
-Here is a repo you can use if you want to try _FlowStorm_ with shadow-cljs https://github.com/jpmonettas/shadow-flow-storm-basic
+Here is a repo you can use if you want to try _FlowStorm_ with shadow-cljs https://github.com/flow-storm/shadow-flow-storm-basic
 
 == Remote debugging
 
@@ -446,7 +446,7 @@ Once you have on your remote box your debuggee running and exposing a nrepl serv
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :runtime-host '"YOUR-REPL-IP-ADDRESS"' :debugger-host '"YOUR-IP-ADDRESS"'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :runtime-host '"YOUR-REPL-IP-ADDRESS"' :debugger-host '"YOUR-IP-ADDRESS"'
 ----
 
 assuming your nrepl server is listening on port 9000.
@@ -470,7 +470,7 @@ assuming your remote process at my-debuggee-box.com has started a nrepl server l
 === Docker
 
 If you run you process inside a docker container, here is a basic template for using _FlowStorm_ with it
-https://github.com/jpmonettas/docker-flow-storm-basic
+https://github.com/flow-storm/docker-flow-storm-basic
 
 == Instrument code
 
@@ -873,7 +873,7 @@ For convenience we are going to create a script `document.sh` like this :
 ----
 #!/bin/bash
 
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}' \
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}}' \
     -X:test flow-storm.api/cli-doc \
     :result-name '"datascript-flow-docs-1.4.0"' \
     :print-unsampled? true \
@@ -916,14 +916,14 @@ For this you can add the docs and _FlowStorm_ to your classpaths as usual, like 
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} dsdocs/dsdocs {:local/root "/home/user/datascript/datascript-flow-docs-1.4.0.jar"}}}'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"} dsdocs/dsdocs {:local/root "/home/user/datascript/datascript-flow-docs-1.4.0.jar"}}}'
 ----
 
 or if you want to use the documentation I already generated and uploaded to my clojars group try :
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} com.github.jpmonettas/datascript-flow-docs {:mvn/version "1.4.0"}}}'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"} com.github.flow-storm/datascript-flow-docs {:mvn/version "1.4.0"}}}'
 ----
 
 and now we can run the debugger :
@@ -1138,7 +1138,7 @@ you can then run and debug the execution of the same command like this :
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {org.clojure/clojurescript {:mvn/version "1.11.57"} com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}' \
+clj -Sforce -Sdeps '{:deps {org.clojure/clojurescript {:mvn/version "1.11.57"} com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"} com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}}' \
 	-X flow-storm.api/cli-run :instrument-ns '#{"cljs."}'           \
                               :profile ':light'                     \
                               :require-before '#{"cljs.repl.node"}' \
@@ -1334,7 +1334,7 @@ If you are using _ClojureStorm_ you can also provide them with :
    -Dflowstorm.theme=dark
    -Dflowstorm.styles=~/.flow-storm/big-fonts.css
    
-You can overwrite all the styles defined here https://github.com/jpmonettas/flow-storm-debugger/blob/master/resources/styles.css
+You can overwrite all the styles defined here https://github.com/flow-storm/flow-storm-debugger/blob/master/resources/styles.css
 
 == Key bindings
 
@@ -1374,7 +1374,7 @@ can start a debugger and connect to it by running :
 
 [,bash]
 ----
-clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :your-app-build-id :debugger-host '"YOUR_DEV_MACHINE_IP"'
+clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"}}}' -X flow-storm.debugger.main/start-debugger :port 9000 :repl-type :shadow :build-id :your-app-build-id :debugger-host '"YOUR_DEV_MACHINE_IP"'
 ----
 
 You also need to make it possible for the device to connect back to the debugger on port 7722. You can accomplish this by running :
@@ -1406,7 +1406,7 @@ Then everything should work. The steps are:
     . Now find the ip address of your windows machine by typing ipconfig in a windows terminal
     . Now, in the WSL2 terminal, type export DISPLAY=IP_ADDERSS_FOUND_ON_STEP_7:0.0
     . Also in the WSL2 terminal, type export LIBGL_ALWAYS_INDIRECT=1
-    . Now you can start clojure with the command clj -Sforce -Sdeps '{:deps {com.github.jpmonettas/flow-storm-dbg {:mvn/version "RELEASE"} com.github.jpmonettas/flow-storm-inst {:mvn/version "RELEASE"}}}'
+    . Now you can start clojure with the command clj -Sforce -Sdeps '{:deps {com.github.flow-storm/flow-storm-dbg {:mvn/version "RELEASE"} com.github.flow-storm/flow-storm-inst {:mvn/version "RELEASE"}}}'
     . That should get you into the REPL, where you should type (require '[flow-storm.api :as fs-api])
     . Finally, type (fs-api/local-connect) and you're done!
 
@@ -1414,7 +1414,7 @@ Then everything should work. The steps are:
 
 === Emacs
 
-Checkout https://github.com/jpmonettas/cider-storm[Cider Storm] an Emacs Cider front-end with support for Clojure and ClojureScript.
+Checkout https://github.com/flow-storm/cider-storm[Cider Storm] an Emacs Cider front-end with support for Clojure and ClojureScript.
 
 === VSCode
 
@@ -1450,9 +1450,9 @@ Is useful when you have instrumented a big application and wish to see tracing p
 
 == Internals, diagrams and documentation
 
-- https://raw.githubusercontent.com/jpmonettas/flow-storm-debugger/master/docs/high_level_diagram.svg
-- https://raw.githubusercontent.com/jpmonettas/flow-storm-debugger/master/docs/timeline.svg
-- https://raw.githubusercontent.com/jpmonettas/flow-storm-debugger/master/docs/run_configs.svg
+- https://raw.githubusercontent.com/flow-storm/flow-storm-debugger/master/docs/high_level_diagram.svg
+- https://raw.githubusercontent.com/flow-storm/flow-storm-debugger/master/docs/timeline.svg
+- https://raw.githubusercontent.com/flow-storm/flow-storm-debugger/master/docs/run_configs.svg
 									   
 ////
 Local Variables:
