--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -108,6 +108,13 @@ If your project uses lein, your project.clj file should look something like this
 with `YOUR_INSTRUMENTATION_STRING` as described above.
 
 [NOTE]
+.lein dependencies
+====
+Make sure your global :dependencies don't include the official org.clojure/clojure dependency.
+For some reason lein will add the dependency to the classpath even if you have it on exclusions.
+====
+
+[NOTE]
 .#rtrace and #trace
 ====
 When using _FlowStorm_ with _ClojureStorm_ it is a error to use #trace or #rtrace. They aren't needed since
