--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -213,6 +213,8 @@ For setting up _FlowStorm_ with shadow-cljs you need to modify two files, your `
 This is setup once and forget, so once you have configured _FlowStorm_ you can do everything from the UI, without
 any other sources modifications.
 
+If you want a shadow-cljs template to play with, take a look at https://github.com/jpmonettas/shadow-flow-storm-basic/[this repo].
+
 [NOTE]
 .shadow-cljs
 ====
