--- a/docs/user_guide.adoc
+++ b/docs/user_guide.adoc
@@ -1364,6 +1364,80 @@ For preventing this _FlowStorm_ provides a couple of tools :
 the infinite loop will be cut after 200 iterations by a thread-trace-limit exceeded exception, and you will have the traces on
 the debugger to figure out what went wrong.
 
+== Controlling instrumentation
+
+If you are using _ClojureStorm_ or _ClojureScriptStorm_ it is important to learn how to control what gets instrumented and
+how to uninstrument things.
+
+The first important thing is to setup your instrumentation correctly via JVM properties :
+
+On _ClojureStorm_ :
+
+[,clojure]
+----
+-Dclojure.storm.instrumentOnlyPrefixes=my-app,my-lib
+-Dclojure.storm.instrumentSkipPrefixes=my-app.too-heavy,my-lib.uninteresting
+----
+
+On _ClojureScriptStorm_ :
+
+[,clojure]
+----
+-Dcljs.storm.instrumentOnlyPrefixes=my-app,my-lib
+-Dcljs.storm.instrumentSkipPrefixes=my-app.too-heavy,my-lib.uninteresting
+----
+
+Apart from `instrumentOnlyPrefixes` which you probably already know, there is `instrumentSkipPrefixes` which also
+accepts a comma separated list of namespaces prefixes to skip. This allows you to instrument you whole app but some
+undesired namespaces.
+
+The next important thing is to be able to enable/disable instrumentation and add/remove prefixes without restarting the
+repl. This is slightly different between Clojure and ClojureScript.
+
+=== Controlling instrumentation in ClojureStorm
+
+You can disable/enable instrumentation by evaluating the keys`:noinst` and  `:inst` on your repl.
+Disabling/enabling instrumentation will not reload your code, so if you need to re-evaluate the forms you are interested
+in after enabling/disabling instrumentation.
+
+For adding/removing prefixes without restarting your repl you can call :
+
+[,clojure]
+----
+(clojure.storm.Emitter/addInstrumentationOnlyPrefix "dev")
+(clojure.storm.Emitter/removeInstrumentationOnlyPrefix "dev")
+
+(clojure.storm.Emitter/addInstrumentationSkipPrefix "dev")
+(clojure.storm.Emitter/removeInstrumentationSkipPrefix "dev")
+----
+
+You can also check your current prefixes by evaluating the `:help` keyword at the repl.
+
+=== Controlling instrumentation in ClojureScriptStorm 
+
+You can add,remove and check your prefixes and also enable/disable instrumentation in ClojureScript with your Clojure
+repl (not the Cljs one) by calling :
+
+[,clojure]
+----
+(cljs.storm.api/add-instr-only-prefix "dev")
+(cljs.storm.api/rm-instr-only-prefix "dev")
+
+(cljs.storm.api/add-instr-skip-prefix "dev")
+(cljs.storm.api/rm-instr-skip-prefix "dev")
+
+(cljs.storm.api/get-instr-prefixes)
+(cljs.storm.api/set-instrumentation true)
+----
+
+The `[add|rm]-instr-prefix` set of functions have an extra parameter called `touch-path`.
+This is kind of a hacky way of going around shadow-cljs cache.
+
+Lets say you added/removed a prefix and you want to fire a shadow-cljs recompile of your files so the changes take effect.
+Shadow-cljs will not recompile files that haven't been modified since the last compilation. You can use the `touch-path`
+parameter for this. If you provide `src` for example, it will walk the directory structure down and touch every file,
+which should fire a recompilation.
+
 == Styling and theming
 
 All functions that start the debugger ui (`flow-storm.api/local-connect`, `flow-storm.debugger.main/start-debugger`) accept a map
